.config/waybar/style.css
@import "../my/current/waybar.css";

* {
  all: unset;
  font-family: "JetBrainsMono Nerd Font Propo", sans-serif;
  font-size: 14px;
}

.modules-right, .modules-left, .modules-center {
  border-radius: 15px;
  padding: 0px 5px;
  margin: 10px 10px;
  margin-bottom: 0px;
  color: @foreground;
  background-color: alpha(@background, 0.90);
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
}

.modules-left {
  margin-left: 26px;
}

.modules-center {
  padding: 0px 25px;
}

.modules-right {
  margin-right: 29px;
}

window#waybar {
  background-color: transparent;
  margin: 0px;
}

window#waybar > box {
}

#custom-launcher {
  color: @cyan;
  font-size: 22px;
}

#clock {
  color: @foreground;
  font-weight: 500;
  padding: 1px 10px;
  border-radius: 20px;
}

#battery,
#custom-launcher,
#idle_inhibitor,
#network,
#power-profiles-daemon,
#pulseaudio
{
  margin: 1px 15px;
}

#workspaces {
  padding: 0px 15px;
}

#workspaces button {
    border-bottom: 2px solid transparent;
    min-width: 40px;
    background-color: transparent;
}

#workspaces button.empty {
    color: @foreground;
}

#workspaces button.active {
  color: @green;
  border-radius: 25px;
  border-bottom: 2px solid @text1;
  border-top: 2px solid @blue;
  transition: all 0.3s ease-in-out;
}

#bluetooth {
  color: @ffffff;
  min-width: 20px;
  margin: 10px 0px;
  background-color: #003366;
  border-radius: 15px;
}

#bluetooth.connected {
  color: @background;
  background-color: @green;
}

#pulseaudio {
  margin: 0px 0px;
}

#idle_inhibitor.activated {
  animation: pulse 3s ease-in-out infinite;
  color: @yellow;
}

#idle_inhibitor.deactivated {
  color: @text3;
}

#power-profiles-daemon.performance {
  animation: pulse 3s ease-in-out infinite;
  color: @yellow;
}

#power-profiles-daemon.balanced{
  color: @blue;
}

#power-profiles-daemon.power-saver {
  color: @green;
}

tooltip {
    background-color: alpha(@background, 0.90);
    border: 1px solid alpha(@yellow, 0.6);
    border-radius: 8px;
    padding: 10px;
}

tooltip label {
    color: @foreground;
    font-size: 13px;
}

@keyframes pulse {
    0%   { opacity: 1; }
    50%  { opacity: 0.4; }
    100% { opacity: 1; }
}

@keyframes pulse-bg {
    0%   { background: rgba(255, 200, 0, 0.0); }
    50%  { background: rgba(255, 200, 0, 0.25); }
    100% { background: rgba(255, 200, 0, 0.0); }
}

